tests/NormalTests/paczka1/fuzzy1/53078173.err
Error in line 5: tO73O S25 80,4
Error in line 21: uEDKjFqtt S25 54,1
Error in line 24: uEDKjFqtt A820 66,9
Error in line 30: A487 A820 83,2
